--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^3.1.9",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
