--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
