--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "npx tsc && node dist/import-data/article-type.js"
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
